# serializer version: 1
# name: TestProjectAPI.test_delete_bulky_postgres_data
  '''
  DELETE
  FROM "insights_persondistinctid"
  WHERE ("team_id",
         "id") IN ((1,
                    2)/* ... */)
  '''
# ---
# name: TestProjectAPI.test_delete_bulky_postgres_data.1
  '''
  DELETE
  FROM "insights_person"
  WHERE ("team_id",
         "id") IN ((1,
                    2)/* ... */)
  '''
# ---
